# MG-RAVENS

./: .buildinfo  .gitattributes  .gitignore  CONTRIBUTORS.md  LICENSE.md  README.md  case3_balanced_CIM100x.xml  genindex.html  index.html  objects.inv  package.json  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
cim/: .gitignore  iec61970cim17v40_iec61968cim13v13b_iec62325cim03v17b_CIM100.1.1.1_mgravens24v1.xmi
examples/: .gitignore  AlgorithmProperties.html  CapacityPrices.html  Conductor.html  DieselFuelPrice.html  EconomicProperties.html  EnergyConsumer.html  EnergyMeasurements.html  EnergySource.html  IEEE13_Assets.xml  LocationalMarginalPrices.html  Messages.html  NaturalGasFuelPrice.html  OperationalLimitSets.html  OtherFossilFuelPrice.html  OutageScenario.html  PowerTransformer.html  PredictedEmissions.html  ProposedBatteryUnitOption.html  ProposedConductorOption.html  ProposedEnergyProducerAsset.html  ProposedEnergyProducerOption.html  ProposedGeneratingUnitOption.html  ProposedPhotovoltaicUnitOption.html  ProposedSiteLocation.html  ProposedSiteLocation_LoadGroups.html  ProposedSiteLocation_Region.html  ProposedSwitchOption.html  ProposedWindUnitOption.html  RotatingMachine.html  ShuntCompensator.html  case3_balanced.dss  case3_balanced.xml
governance/: charter.html  steering_committee.html  working_group.html
ravens/: io.py
schema/: ACDCConverter.html  ACLineSegment.html  ACLineSegmentPhase.html  ADSInstructionTypeCommitment.html  ADSInstructionTypeOOS.html  ASTMStandard.html  (+747 more)
(+2389 files in other folders)
