[tool.poetry]
name = "mg-ravens"
version = "0.1.0"
description = ""
authors = ["David M Fobes <dfobes@lanl.gov>"]
license = "Apache-2"
readme = "README.md"
packages = [{include = "ravens"}]

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.2"
pandas = "^2.1"
pandas_access = "^0.0.1"
rdflib = "^7.0"
json-schema-for-humans = "^0.46"
markdownify = "^0.13"
lxml = "^5.3.0"
opendssdirect-py = {extras = ["extras"], version = "^0.9.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-press-theme = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
